tests/baselines/reference/computedPropertyNames40_ES6.errors.txt
tests/cases/conformance/es6/computedProperties/computedPropertyNames40_ES6.ts(8,5): error TS2393: Duplicate function implementation.
tests/cases/conformance/es6/computedProperties/computedPropertyNames40_ES6.ts(8,5): error TS2411: Property '[""]' of type '() => Foo' is not assignable to 'string' index type '() => Foo2'.
tests/cases/conformance/es6/computedProperties/computedPropertyNames40_ES6.ts(9,5): error TS2393: Duplicate function implementation.


==== tests/cases/conformance/es6/computedProperties/computedPropertyNames40_ES6.ts (3 errors) ====
    class Foo { x }
    class Foo2 { x; y }
    
    class C {
        [s: string]: () => Foo2;
    
        // Computed properties
        [""]() { return new Foo }
        ~~~~
!!! error TS2393: Duplicate function implementation.
        ~~~~
!!! error TS2411: Property '[""]' of type '() => Foo' is not assignable to 'string' index type '() => Foo2'.
        [""]() { return new Foo2 }
        ~~~~
!!! error TS2393: Duplicate function implementation.
    }